--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Insert description here" />
     <title>Title Here</title>
     <!--<link rel="stylesheet" href="libs/styles/bootstrap.min.css">-->
+    <!--TODO: Add favicon-->
 </head>
 
 <body>
